feat: endpoints para placas relacionado con el sismo