@@ -1,8 +1,6 @@
 package mx.com.escom.sismos.external.jpa.dao;
 
 import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
@@ -13,11 +11,16 @@ import mx.com.escom.sismos.external.jpa.repository.SensoresJpaRepository;
 
 @ApplicationScoped
 public class SensoresDao implements SensoresRepository{
+
+    private final SensoresJpaRepository sensoresJpaRepository;
+
     @Inject
-    SensoresJpaRepository sensoresJpaRepository;
+    public SensoresDao(SensoresJpaRepository sensoresJpaRepository) {
+        this.sensoresJpaRepository = sensoresJpaRepository;
+    }
     @Override
     public List<Sensores> getAllSensores() {
-        return sensoresJpaRepository.findAll().stream().map(SensoresJpa::toEntity).collect(Collectors.toList());
+        return sensoresJpaRepository.findAll().stream().map(SensoresJpa::toEntity).toList();
 
     }
 }
